manifest/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-api-service
  namespace: default
spec:
  gateways:
    - default/otus-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: "/ui-api-service/api/v1/auth/"
        - uri:
            prefix: "/ui-api-service/api/v1/external/"
      route:
        - destination:
            host: ui-api-service
            port:
              number: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ui-api-service
spec:
  host: ui-api-service.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
